
version 10.5.2 (2023-02-13)
    * EntityListingRequest must use HTTP GET, not POST (iss #418).

version 10.6 (2023-02-14)
    * Adds AuthorizationRequest.Builder.prompt(Prompt.Type...) method.
    * Adds AuthenticationRequest.Builder.prompt(Prompt.Type...) method.

version 10.7 (2023-02-16)
    * Adds ConfigurationType.JSON_OBJECT enum constant.
    * Adds JSONObjectConfiguration interface.
    * Updates ValueOperation to support JSON objects.

version 10.7.1 (2023-03-30)
    * Updates Nimbus JOSE+JWT to 9.30.2
    * Updates JSON Smart to 2.4.10
    * Updates Google Tink to 1.8.0

version 10.7.2 (2023-04-17)
    * ClientMetadata and OIDCClientMetadata.parse must not designate the
      top-level client information fields as custom metadata fields (iss #421).

version 10.8 (2023-04-22)
    * Factors out an AbstractConfirmation class for X509CertificateConfirmation
      and JWKThumbprintConfirmation.
    * Adds new AbstractConfirmation.mergeInto(JSONObject) method.

version 10.9 (2023-05-06)
    * Adds ClaimsSet.toString() as toJSONString() alias.

version 10.9.1 (2023-05-11)
    * ClientMetadata.parse and OIDCClientMetadata.parse must filter out illegal
      chars in the error_description (iss #423).

version 10.9.2 (2023-06-21)
    * HTTPResponse.send must read error responses from InputStreamReader using
      UTF-8 character encoding (iss #426).

version 10.10 (2023-06-29)
    * Adds StandardOperations class to enumerate all standard OpenID Connect
      Federation 1.0 policy operation names and the order in which the standard
      operations must be applied to a metadata parameter.
    * The OpenID Connect Federation 1.0 AddOperation.apply method must not
      add value(s) that are already present in the parameter.
    * The OpenID Connect Federation 1.0 AddOperation.apply method must return
      an immutable List<String>.
    * The OpenID Connect Federation 1.0 SubsetOfOperation.apply method must
      return null instead of an empty List<String>.